cambie el index por mi proyecto final de javascript

--- a/index_noche.html
+++ b/index_noche.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icono.png" type="imague/png">
-    <link rel="stylesheet" href="trabajoFinal.css">
+    <link rel="stylesheet" href="trabajoFinalNoche.css">
     <title>Clima Cavansas</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
                     <a class="a" href="#form">Contactanos</a>
                     </li>
                 </ul>
-                <img class="headerDiv__img  img--logo" id="noche" src="logoheader.png">
+                <img class="headerDiv__img  img--logo" id="noche" src="logheadernoche.png">
             </nav>
         </div>
     </header>
@@ -30,6 +30,7 @@
     <div class="inicioDiv">
         <h1>Tiempo en Dallas, US</h1>
         <img class="inicioDiv__img img--tip" src="tip.png" id="eliminar">
+</div>
     </div>
     <div class="tempDiv" id="temperatura">
         
@@ -42,8 +43,7 @@
             con lluvias abundantes en zonas cordilleranas. Seguirán las tormentas localmente fuertes
             <br> en Cuyo y el NOA, mientras que el centro del país se prepara para la primera ola de calor
             <br> de la temporada.</p>
-        <img class="contPrin__img img--notiArg" src="noticiasdearg.png">
-        <img class="contPrin__p img--anuncio" src="brancaIMG.jpg">
+        <img class="contPrin__img img--notiArg" src="noticiasdeargNoche.png">
         <p class="contPrin__p p--textoDebajo"><strong>El calor se extiende en gran parte de la Argentina este fin de semana,</strong> y son muy <br> pocas las zonas donde no se
             superan los 30 °C de máxima, tales como el sur de la <br> Patagonia o la costa Atlántica bonaerense. <br>
             <br> Pero a partir  de este domingo, <strong> las temperaturas prometen entrar en una recta
@@ -54,12 +54,13 @@
             <br> </strong> Mientras tanto, y bajo un contexto <br> totalmente distinto, <strong> el centro y sur de la Patagonia se
             prepara este domingo para <br> recibir el impacto de un intenso río atmosférico </strong> asociado a un profundo centro de <br>
             bajas presiones, que dejará vientos ampliamente superiores a 100 km/h y lluvias <br> abundantes en sectores cordilleranos.</p>
+            <img class="contPrin__p img--anuncio" src="brancaIMG.jpg">
     </div>
 </section>
 <section class="contenidoSecundario" id="filling">
     <h3 class="contSecu__h3 h3--subtituloMundo">Noticias del tiempo en el Mundo</h3>
     <h5>Un potente domo de calor se está formando sobre <br> EE.UU. y elevará las temperaturas por encima de los 37 °C</h5>
-    <img class="contSecu__img img--imaguenEEUU" src="noticiasdelmundo.png">
+    <img class="contSecu__img img--imaguenEEUU" src="noticiasdelmundoNoche.png">
     <p class="contSecu__p p--textoMundo"><strong> (CNN)— </strong> Las temperaturas más altas del año hasta la fecha llegarán pronto a la mitad 
         <br> oriental de Estados Unidos, con la formación de un potente domo de calor que afectará 
         <br> a millones de personas esta semana. <br><br> Decenas de millones de personas, desde el Medio 
@@ -90,6 +91,6 @@
         <button class="form__button button--submit" type="submit">Enviar</button>
     </form>
 </section>
-<script src="trabajoFinal.js"></script>
+<script src="trabajoFinalNoche.js"></script>
 </body>
 </html>
