cambie el index por mi trabajo final y arregle errores con enlaces

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icono.png" type="imague/png">
-    <link rel="stylesheet" href="trabajoFinal.css">
+    <link rel="stylesheet" href="index.css">
     <title>Clima Cavansas</title>
 </head>
 <body>
@@ -90,6 +90,6 @@
         <button class="form__button button--submit" type="submit">Enviar</button>
     </form>
 </section>
-<script src="trabajoFinal.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
