arregle errores con enlaces

--- a/index_noche.html
+++ b/index_noche.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icono.png" type="imague/png">
-    <link rel="stylesheet" href="trabajoFinalNoche.css">
+    <link rel="stylesheet" href="index_noche.css">
     <title>Clima Cavansas</title>
 </head>
 <body>
@@ -91,6 +91,6 @@
         <button class="form__button button--submit" type="submit">Enviar</button>
     </form>
 </section>
-<script src="trabajoFinalNoche.js"></script>
+<script src="index-noche.js"></script>
 </body>
 </html>
